--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,9 @@ commands:
   unit_tests_command:
     steps:
       - checkout
+      - setup_remote_docker
       - attach_workspace:
           at: ~/project
-      - run:
-          name: Run Unit Tests
-          command: |
-            systemctl status docker
-      - run:
-          name: Run Unit Tests
-          command: |
-            docker-compose -v
       - run:
           name: Run Unit Tests
           command: |
