--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   web:
-    image: clean-solution-web:latest
+    image: ${WEB_IMAGE_NAME}:latest
     ports:
       - 9001:80
     env_file:
