--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -1,14 +1,25 @@
 variables:
-  vmImageName: 'ubuntu-20.04'
-  workingDirectory: '$(System.DefaultWorkingDirectory)'
+  - group: clean-solution
+  - name: 'vmImageName'
+    value: 'ubuntu-20.04'
+  - name: 'workingDirectory'  
+    value: '$(System.DefaultWorkingDirectory)'
+  - name: 'reportsFolder'
+    value: '$(Build.ArtifactStagingDirectory)/reports'
+  - name: 'reportsArchiveFile'
+    value: '$(Build.ArtifactStagingDirectory)/reports.zip'
+  - name: 'reportsArtifactName'
+    value: 'reports-$(Build.BuildNumber)'
+  
   
 stages:
-  - stage: Build SDK
-    displayName: Build SDK
+  - stage: build_and_tag
+    displayName: Build and Tag SDK and WEB images
 
     jobs:
-      - job: Build and Tag SDK image
-        displayName: Build
+ 
+      - job: build_sdk_web
+        displayName: Build and Tag SDK and WEB images
         pool:
           vmImage: $(vmImageName)
 
@@ -31,34 +42,65 @@ stages:
               targetType: 'inline'
               script: |
                 make run_sonar_scan
-                
-  - stage: Build Web
-      displayName: Build Web
 
-      jobs:
-        - job: Build and Tag Web image
-          displayName: Build
-          pool:
-            vmImage: $(vmImageName)
+          - task: Bash@3
+            displayName: Build and Tag Web Image
+            inputs:
+              targetType: 'inline'
+              script: |
+                make build_and_tag_web version=$(Build.BuildNumber) docker_username=$(docker_username)
 
-          steps:
-            - task: DockerInstaller@0
-              displayName: Install docker
-              inputs:
-                dockerVersion: '17.09.0-ce'
+          - task: Bash@3
+            displayName: Run Behavioral Tests
+            inputs:
+              targetType: 'inline'
+              script: |
+                make behavioral_test
 
-            - task: Bash@3
-              displayName: Build and Tag Web Image
-              inputs:
-                targetType: 'inline'
-                script: |
-                  make build_and_tag_web version=$(Build.BuildNumber) docker_username=$(docker_username)
+          - task: Bash@3
+            displayName: Prepare Artifact Folder
+            condition: always()
+            inputs:
+              targetType: 'inline'
+              script: |
+                mkdir $(reportsFolder)
+                ls
+                if [ -d "test-report" ]
+                then
+                  cp -r test-report $(reportsFolder)
+                fi
+                if [ -d "sonar-report" ]
+                then
+                  cp -r sonar-report $(reportsFolder)
+                fi
+                if [ -d  "test/behavioral/target/surefire-reports" ]
+                then
+                  cp -r test/behavioral/target/surefire-reports $(reportsFolder)
+                fi
+                ls  $(reportsFolder)
 
-            - task: Bash@3
-              displayName: Run Behavioral Tests
-              inputs:
-                targetType: 'inline'
-                script: |
-                  make behavioral_tests
+          - task: ArchiveFiles@2
+            displayName: Archive Reports
+            condition: always()
+            inputs:
+              rootFolderOrFile: '$(reportsFolder)'
+              inlcludeRootFolder: false
+              archiveType: 'zip'
+              archiveFile: '$(reportsArchiveFile)'
+              replaceExistingArchive: true
 
-          
+          - task: PublishPipelineArtifact@1
+            displayName: Publish Reports
+            condition: always()
+            inputs:
+              targetPath: '$(reportsArchiveFile)'
+              artifact: 'ci-reports'
+              publishLocation: 'pipeline'
+
+          - task: Bash@3
+            displayName: Clear Artifact Staging Directory
+            condition: always()
+            inputs:
+              targetType: 'inline'
+              script: |
+                rm -rf $(Build.ArtifactStagingDirectory)/*
