Added integration tests for Infrastructure

--- a/sdk.env
+++ b/sdk.env
@@ -4,3 +4,5 @@ SONAR_PROJECT_NAME=ProductService
 SONAR_LOGIN=admin
 SONAR_PASSWORD=admin
 SONAR_URI=http://sonarqube:9000
+MongoDbConfig__ConnectionString=mongodb://mongodb:27017/product-service
+MongoDbConfig__DatabaseName=product-service
