--- a/Dockerfile.web.prod
+++ b/Dockerfile.web.prod
@@ -11,4 +11,4 @@ FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim
 WORKDIR /app
 COPY --from=build-env /app/out .
 RUN ls
-ENTRYPOINT ["dotnet", "AspNetCore.Examples.ProductService.dll"]
+ENTRYPOINT ["dotnet", "AdspNetCore.Examples.ProductService.dll"]
