--- a/docker/elk/docker-compose.elk.yml
+++ b/docker/elk/docker-compose.elk.yml
@@ -3,6 +3,7 @@ services:
 
   elasticsearch:
     container_name: elasticsearch
+    domainname: app
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
     ports:
       - 9200:9200
@@ -12,9 +13,10 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - discovery.type=single-node
     volumes:
-      - ./es-data:/usr/share/elasticsearch/data
+      - ../../es-data:/usr/share/elasticsearch/data
 
   kibana:
+    domainname: app
     container_name: kibana
     image: docker.elastic.co/kibana/kibana:7.9.2
     ports:
