--- a/docker/sonarqube/docker-compose.sonarqube.yml
+++ b/docker/sonarqube/docker-compose.sonarqube.yml
@@ -1,8 +1,10 @@
 version: '2'
 services:
   sonarqube:
+    domainname: app
+    container_name: sonarqube
     image: sonarqube:8.2-community
     ports:
       - 9000:9000
     volumes:
-      - ./sonar-conf:/opt/sonarqube/conf
+      - ../../sonar-conf:/opt/sonarqube/conf
