--- a/docker/web/Dockerfile.web.prod
+++ b/docker/web/Dockerfile.web.prod
@@ -10,5 +10,4 @@ RUN dotnet publish src/AspNetCore.Examples.ProductService/AspNetCore.Examples.Pr
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim
 WORKDIR /app
 COPY --from=build-env /app/out .
-RUN ls
-ENTRYPOINT ["dotnet", "AdspNetCore.Examples.ProductService.dll"]
+ENTRYPOINT ["dotnet", "AspNetCore.Examples.ProductService.dll"]
