--- a/docker-compose.karate.yaml
+++ b/docker-compose.karate.yaml
@@ -12,3 +12,6 @@ services:
     volumes:
       - "./karate:/usr/src/karate"
       - "/var/run/docker.sock:/var/run/docker.sock"
+    depends_on:
+      web:
+        condition: service_healthy
