--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,12 @@ services:
       - ./app/test-report:/app/test-report
     ports:
       - 8000:80
+    healthcheck:
+      test: curl --fail http://localhost/healthcheck || exit 1
+      interval: 60s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
     depends_on:
       - wiremock
       - mongodb
