Fixing CI Pipeline

--- a/app/Makefile
+++ b/app/Makefile
@@ -36,6 +36,15 @@ end_sonar_scan:
 run_unit_tests:
 	dotnet test --settings settings/coverlet.runsettings --logger trx --results-directory "test-results"
 
+start_with_coverlet_watch:
+	coverlet out/AspNetCore.Examples.ProductService.dll \
+		--target dotnet \
+		--targetargs "out/AspNetCore.Examples.ProductService.dll --urls=http://0.0.0.0:80/" \
+		--format opencover \
+		--include-test-assembly \
+		--verbosity:detailed \
+		--output test-results/behavioral.opencover.xml
+
 sonar_scan:
 	dotnet sonarscanner begin \
 		/k:${SONAR_PROJECT_KEY} \
