Fixing CI pipeline

--- a/app/Makefile
+++ b/app/Makefile
@@ -10,9 +10,7 @@ begin_sonar_scan:
 	dotnet build
 
 end_coverlet:
-	pidLine=$(ps -ax | grep dotnet)
-	pidLine=$(echo $pidLine)
-	pid=${pidLine%% *}
+	pid=$(cat .coverlet-pid)
 	echo "pid = $pid"
 	kill $pid
 
@@ -43,7 +41,7 @@ start_with_coverlet_watch:
 		--format opencover \
 		--include-test-assembly \
 		--verbosity:detailed \
-		--output test-results/behavioral.opencover.xml
+		--output test-results/behavioral.opencover.xml & echo $! > .coverlet-pid
 
 sonar_scan:
 	dotnet sonarscanner begin \
