Fixing CI Pipeline

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,8 +4,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS prepare-build-env
 RUN apt-get update
 RUN apt-get -y install default-jre
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash
-RUN apt-get -y install nodejs
-RUN apt-get -y install make
+RUN apt-get -y install nodejs make procps
 RUN node -v
 RUN npm -v
 RUN npm install -g sonar-report
